# AP_doodle_game

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  README.md  Random.cpp  Score.cpp  Score.h  Stopwatch.h  World.cpp  World.h  doxygenconfig.cfg  main.cpp
Entity_Model/: EM_BG_Tile.cpp  EM_BG_Tile.h  EM_Bonus.h  EM_Platform.cpp  EM_Platform.h  EM_Player.cpp  EM_Player.h  Entity_Model.cpp  Entity_Model.h
Entity_Model/EM_Bonus_Types/: EM_Jetpack.cpp  EM_Jetpack.h  EM_Spring.cpp  EM_Spring.h
Entity_Model/EM_Platform_Types/: EM_Blue_Platform.cpp  EM_Blue_Platform.h  EM_Green_Platform.cpp  EM_Green_Platform.h  EM_White_Platform.cpp  EM_White_Platform.h  EM_Yellow_Platform.cpp  EM_Yellow_Platform.h
Entity_View/: EV_BG_Tile.cpp  EV_BG_Tile.h  EV_Bonus.cpp  EV_Bonus.h  EV_Platform.cpp  EV_Platform.h  EV_Player.cpp  EV_Player.h  Entity_View.cpp  Entity_View.h
Entity_View/EV_Bonus_Types/: EV_Jetpack.cpp  EV_Jetpack.h  EV_Spring.cpp  EV_Spring.h
Entity_View/EV_Platform_Types/: EV_Blue_Platform.cpp  EV_Blue_Platform.h  EV_Green_Platform.cpp  EV_Green_Platform.h  EV_White_Platform.cpp  EV_White_Platform.h  EV_Yellow_Platform.cpp  EV_Yellow_Platform.h
design_patterns/: Abstract_Factory.cpp  Abstract_Factory.h  Concrete_Factory.cpp  Concrete_Factory.h  IObserver.cpp  Observer.h  Subject.cpp  Subject.h
docs/html/: 3_816_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  3_816_83_2CompilerIdC_2CMakeCCompilerId_8c_source.html  Abstract__Factory_8cpp_source.html  Abstract__Factory_8h_source.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  Camera_8cpp_source.html  Camera_8h_source.html  Concrete__Factory_8cpp_source.html  Concrete__Factory_8h_source.html  Entity__Model_8cpp_source.html  Entity__Model_8h_source.html  Entity__View_8cpp_source.html  Entity__View_8h_source.html  Game_8cpp_source.html  Game_8h_source.html  IObserver_8cpp_source.html  IObserver_8h_source.html  ISubject_8cpp_source.html  ISubject_8h_source.html  M__BG__Tile_8cpp_source.html  M__BG__Tile_8h_source.html  M__Blue__Platform_8cpp_source.html  M__Blue__Platform_8h_source.html  M__Bonus_8cpp_source.html  M__Bonus_8h_source.html  M__Green__Platform_8cpp_source.html  M__Green__Platform_8h_source.html  M__Jetpack_8cpp_source.html  M__Jetpack_8h_source.html  M__Platform_8cpp_source.html  M__Platform_8h_source.html  M__Player_8cpp_source.html  M__Player_8h_source.html  M__Spring_8cpp_source.html  M__Spring_8h_source.html  M__White__Platform_8cpp_source.html  M__White__Platform_8h_source.html  M__Yellow__Platform_8cpp_source.html  M__Yellow__Platform_8h_source.html  (+175 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+5 more)
docs/latex/: 3_816_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.tex  3_816_83_2CompilerIdC_2CMakeCCompilerId_8c_source.tex  3_822_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.tex  3_822_81_2CompilerIdC_2CMakeCCompilerId_8c_source.tex  Abstract__Factory_8cpp_source.tex  Abstract__Factory_8h_source.tex  CMakeCCompilerId_8c_source.tex  CMakeCXXCompilerId_8cpp_source.tex  Camera_8cpp_source.tex  Camera_8h_source.tex  Concrete__Factory_8cpp_source.tex  Concrete__Factory_8h_source.tex  Entity__Model_8cpp_source.tex  Entity__Model_8h_source.tex  Entity__View_8cpp_source.tex  Entity__View_8h_source.tex  Game_8cpp_source.tex  Game_8h_source.tex  IObserver_8cpp_source.tex  IObserver_8h_source.tex  ISubject_8cpp_source.tex  ISubject_8h_source.tex  M__BG__Tile_8cpp_source.tex  M__BG__Tile_8h_source.tex  M__Blue__Platform_8cpp_source.tex  M__Blue__Platform_8h_source.tex  M__Bonus_8cpp_source.tex  M__Bonus_8h_source.tex  M__Green__Platform_8cpp_source.tex  M__Green__Platform_8h_source.tex  M__Jetpack_8cpp_source.tex  M__Jetpack_8h_source.tex  M__Platform_8cpp_source.tex  M__Platform_8h_source.tex  M__Player_8cpp_source.tex  M__Player_8h_source.tex  M__Spring_8cpp_source.tex  M__Spring_8h_source.tex  M__White__Platform_8cpp_source.tex  M__White__Platform_8h_source.tex  (+117 more)
src/logic/: Camera.cpp  Camera.h  Namespaces.cpp  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  World.cpp  World.h  namespaces.cpp
src/logic/Entity_Model/: BG_Tile.cpp  BG_Tile.h  Bonus.cpp  Bonus.h  EM_BG_Tile.cpp  EM_BG_Tile.h  EM_Bonus.cpp  EM_Bonus.h  EM_Platform.cpp  EM_Platform.h  EM_Player.cpp  EM_Player.h  Entity_Model.cpp  Entity_Model.h  M_BG_Tile.cpp  M_BG_Tile.h  M_Bonus.cpp  M_Bonus.h  M_Platform.cpp  M_Platform.h  M_Player.cpp  M_Player.h  Platform.cpp  Platform.h  Player.cpp  Player.h
src/logic/Entity_Model/EM_Bonus_Types/: EM_Jetpack.cpp  EM_Jetpack.h  EM_Spring.cpp  EM_Spring.h  Jetpack.cpp  Jetpack.h  Spring.cpp  Spring.h
src/logic/Entity_Model/EM_Platform_Types/: Blue_Platform.cpp  Blue_Platform.h  EM_Blue_Platform.cpp  EM_Blue_Platform.h  EM_Green_Platform.cpp  EM_Green_Platform.h  EM_White_Platform.cpp  EM_White_Platform.h  EM_Yellow_Platform.cpp  EM_Yellow_Platform.h  Green_Platform.cpp  (+5 more)
src/logic/design_patterns/: Abstract_Factory.cpp  Abstract_Factory.h  IObserver.h  ISubject.cpp  ISubject.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
src/representation/: Game.cpp  Game.h
src/representation/Entity_View/: BG_Tile.cpp  BG_Tile.h  Bonus.cpp  Bonus.h  EV_BG_Tile.cpp  EV_BG_Tile.h  EV_Bonus.cpp  EV_Bonus.h  EV_Platform.cpp  EV_Platform.h  EV_Player.cpp  EV_Player.h  Entity_View.cpp  Entity_View.h  Platform.cpp  Platform.h  Player.cpp  Player.h  V_BG_Tile.cpp  V_BG_Tile.h  V_Bonus.cpp  V_Bonus.h  V_Platform.cpp  V_Platform.h  V_Player.cpp  V_Player.h
src/representation/design_patterns/: Concrete_Factory.cpp  Concrete_Factory.h
(+48 files in other folders)
